# AhuehueteKokoro

./: .env.example  .gitignore  AGENTS.md  AUDIT-2026-06-09.md  CODEOWNERS  IDENTITY_kokoro.md  README.md  SECURITY.md  SETUP-CLAUDE-DESKTOP.md  kokoro-package.yaml  pyproject.toml  research-anti-slop-voice-2026-06-09.md  voiceprint_eduardo.md
.claude/: CLAUDE.md
.claude/commands/: kokoro-acquisition-run.md  kokoro-adr.md  kokoro-ads.md  kokoro-ai-copilot-run.md  kokoro-analytics.md  kokoro-caja-creativa.md  kokoro-calendar.md  kokoro-campaign-lab-run.md  kokoro-canvas.md  kokoro-client.md  kokoro-close.md  kokoro-connect.md  kokoro-consultor.md  kokoro-creative-campaign-run.md  kokoro-creative-review.md  kokoro-creative.md  kokoro-cur.md  kokoro-dashboard.md  kokoro-decide.md  kokoro-diagnose-anclas.md  kokoro-diagnose-ranking.md  kokoro-diagnose-report.md  kokoro-diagnose-speedboat.md  kokoro-diagnose-vision2020.md  kokoro-diagnose.md  kokoro-dinamicas-vivas.md  kokoro-experiment.md  kokoro-factory.md  kokoro-feed-audit.md  kokoro-finance.md  kokoro-forces.md  kokoro-funnel.md  kokoro-gads.md  kokoro-google-ads-run.md  kokoro-growth-diagnosis-run.md  (+40 more)
connectors/meta-ads/: .gitignore  LICENSE  README.md  SETUP.md  doctor.sh  pyproject.toml  run.sh
connectors/meta-ads/config/: meta-ads.env.template
connectors/meta-ads/src/kokoro_meta_ads/: __init__.py  doctor.py  launcher.py  server.py
install/: install.sh  lib.sh  privacy_scan.py  uninstall.sh  update.sh  verify.sh
runtime/: agent_graph.py  growth_diagnosis.py  kokoro.py
tests/: test_integrity.py
(+292 files in other folders)
